--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,12 @@ on:
      
    workflow_dispatch:
    
- jobs:
-     build:
-     runs-on: ubuntu-latest
+jobs:
+  build:
+   runs-on: ubuntu-latest
      
-     steps:
-      - users: actions/checkout@v3
+   steps:
+      - uses: actions/checkout@v3
       
       - name: Run  a one-line script
         run: echo Hello world!!!
